crates/parser/tests/snapshots/error_block_string_empty_inference.snap
---
source: crates/parser/tests/snapshots.rs
---
# error-block-string-empty-inference

## Input

```
key |

  content

```

## CST

```
SOURCE_FILE@0..17
  ENTRY@0..6
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
  NEWLINE@6..7 "\n"
  SPACE@7..9 "  "
  ENTRY@9..17
    WORD_KEY@9..16
      WORD@9..16 "content"
    NEWLINE@16..17 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "cannot infer base indent from an empty line",
        range: 6..6,
    },
    SyntaxError {
        message: "unexpected indentation",
        range: 7..9,
    },
    SyntaxError {
        message: "missing value for the key",
        range: 16..16,
    },
]
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@9..16 "content",
            },
            value: none,
        },
    ],
}
```

vim:ft=markdown
