crates/parser/tests/snapshots/error_block_string_insufficient_indent.snap
---
source: crates/parser/tests/snapshots.rs
---
# error-block-string-insufficient-indent

## Input

```
key |
   
  a

```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..14
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..14
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..9 "   "
      LINE_STRING@9..9
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      ERROR@12..13
        STRING@12..13 "a"
      NEWLINE@13..14 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "block string line has insufficient indentation",
        range: 10..12,
    },
]
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
