crates/parser/tests/snapshots/error_unexpected_indentation.snap
---
source: crates/parser/tests/snapshots.rs
---
# error-unexpected-indentation

## Input

```
a 1
  b 2

```

## CST

```
SOURCE_FILE@0..10
  ENTRY@0..4
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..3
      NUMERAL@2..3 "1"
    NEWLINE@3..4 "\n"
  SPACE@4..6 "  "
  ENTRY@6..10
    WORD_KEY@6..7
      WORD@6..7 "b"
    SPACE@7..8 " "
    INTEGER@8..9
      NUMERAL@8..9 "2"
    NEWLINE@9..10 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "unexpected indentation",
        range: 4..6,
    },
]
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..3 "1",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@6..7 "b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@8..9 "2",
            },
        },
    ],
}
```

vim:ft=markdown
